testdata/baselines/reference/submodule/conformance/jsdocParseDotDotDotInJSDocFunction.errors.txt
a.js(3,12): error TS7006: Parameter 'callback' implicitly has an 'any' type.


==== a.js (1 errors) ====
    // from bcryptjs
    /** @param {function(...[*])} callback */
    function g(callback) {
               ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
        callback([1], [2], [3])
    }
    
    /**
     * @type {!function(...number):string}
     * @inner
     */
    var stringFromCharCode = String.fromCharCode;
    